fixed issue to make TemporaryFolderManager compilable in java 11